get single event, tests, swagger file
