# src/controllers/events.js
@@ -1,0 +1,13 @@
+const Event = require('../models/event');
+const Ngo = require('../models/ngo');
+const ErrorResponse = require('../utils/errorResponse');
+
+exports.getEvent = async (req, res, next) => {
+  const event = await Event.findById(req.params.id)
+    .select('-pendingApplicants -approvedApplicants -declinedApplicants')
+    .populate('ngo', 'name');
+  if (!event) {
+    return next(new ErrorResponse('No event found', 404));
+  }
+  return res.status(200).json({ success: true, data: event });
+};
